add gem for guard on debian

--- a/re-former/Gemfile
+++ b/re-former/Gemfile
@@ -49,6 +49,10 @@ group :development do
   gem 'spring-watcher-listen', '~> 2.0.0'
 end
 
+group :development do
+  gem 'libnotify'
+end
+
 group :test do
   gem 'guard'
   gem 'guard-minitest'
