--- a/re-former/Gemfile
+++ b/re-former/Gemfile
@@ -36,6 +36,8 @@ gem 'jbuilder', '~> 2.5'
 # gem 'capistrano-rails', group: :development
 
 group :test do
+  gem 'minitest'
+  gem 'minitest-reporters'
   gem 'guard'
   gem 'guard-minitest'
 end
@@ -52,6 +54,7 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+  gem 'libnotify'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
